[workspace]
resolver = "2"
members = [
    "helios",
]
# winterjs-main is intentionally NOT a workspace member; it pins wasix-forked
# crates that conflict with mainline (hyper 0.14 + wasix mozjs). It builds
# standalone with its own lockfile via `cd winterjs-main && cargo build`.
exclude = [
    "winterjs-main",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/VrilLabs/helios"
authors = ["HELIOS contributors"]
rust-version = "1.75"

# Dependencies shared across all HELIOS workspace crates.
# Versions match `.github/copilot-instructions/instructions.md` Phase 0.
[workspace.dependencies]
# --- HTTP stack: hyper 1.x + HTTP/3 (Phase 0 + Phase 4) ---
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"

# --- Async runtime (Phase 0) ---
tokio = { version = "1.38", features = ["full", "parking_lot"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"

# --- Lock-free primitives (Phase 1) ---
crossbeam = "0.8"
crossbeam-queue = "0.3"
dashmap = "6"
parking_lot = "0.12"

# --- WIT / WASM Component Model (Phase 3) ---
wasmtime = { version = "26", features = ["component-model", "async", "runtime", "cranelift"] }
wasmtime-wasi = "26"
wit-bindgen = "0.35"
capnp = "0.20"

# --- Wizer pre-init (Phase 5) ---
wizer = { version = "7", default-features = false }

# --- Bench harness (helios bench) ---
hdrhistogram = "7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream", "json"] }

# --- JS execution engine (Boa) ---
boa_engine = { version = "0.21", features = ["annex-b"] }
boa_gc = "0.21"
boa_runtime = "0.21"

# --- Misc ---
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
memchr = "2"
once_cell = "1"
arc-swap = "1"
ring = "0.17"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.bench]
inherits = "release"
debug = true
